--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ p{ margin:10px auto}
 
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Office (LS):&nbsp; 3.25, Sir William Henry Bragg Building, Leeds, UK, LS2 9BW &nbsp;</p>
 
-<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: r.yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
+<p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email: R. Yang1 AT leeds DOT ac DOT uk (main) or renyu.yang1 AT gmail DOT com &nbsp; </p>
 <p class="style11">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Links: &nbsp;&nbsp;
 <a href="http://uk.linkedin.com/pub/renyu-yang/60/b5b/96/" target="_blank">
     <img src="icons/linkedin.jpg" width="30" height="30" border="0" alt="LinkedIn" title="LinkedIn"/></a>
@@ -220,7 +220,7 @@ p{ margin:10px auto}
 <div id="div_bio">
 
 <p class="Bolder">Short Bio</p> 
-<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Big Data and Brain Computing Research Center (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
+<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing">School of Computing</a>, <a href="https://eps.leeds.ac.uk/">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn">Beijing Advanced Innovation Center for Big Data and Brian Computing (BDBC)</a>, Beijing, China. I was a research scientist at <a href="http://www.edgetic.com">Edgetic Ltd.</a>, a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 I have been (co-)leading several China/UK national and international projects in terms of distributed resource management and scheduling, massive-scale data analysis for intelligent decision making, and deep learning systems. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
 </span></p>
 
@@ -260,7 +260,7 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Big Data and Brain Computing Research Center (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brian Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
 <p><span class="style11">&bull; 2018.3 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
 <p><span class="style11">&bull; 2017.10 - 2020.8: &nbsp; Adjunct Research Fellow at University of Leeds, UK </span></p>
@@ -275,41 +275,41 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">
 
-<p><span class="style11">&bull; T.Li, Z.Hong, Q.Cai, L.Yu, Z.Wen, and R.Yang*. <a href="paper/tkde2021-bissiam.pdf">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p>
+<p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p>
 
-<p><span class="style11">&bull; R.Yang', Y.Hei', H.Peng, L.Wang, X.Xu, J.Liu, H.Liu, J.Xu, L.Sun. <a href="paper/tnnls2021-hawk.pdf">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021 </span></p>
+<p><span class="style11">&bull; R. Yang', Y. Hei', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. <a href="paper/tnnls2021-hawk.pdf">Hawk: Rapid Android Malware Detection through Heterogeneous Graph Neural Network</a>. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021 </span></p>
 
-<p><span class="style11">&bull; G.Yeung, B.Borowiec, R.Yang*, A.Friday, R.Harper, P.Garraghan. <a href="paper/tpds2021-horus.pdf">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 </span></p>
+<p><span class="style11">&bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. <a href="paper/tpds2021-horus.pdf">Horus: Interference-Aware and Prediction-Based Scheduling in Deep Learning Systems</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Yang, Z.Wang, J.Li, L.He, P.S.Yu, A.Zomaya, R.Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
+<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P.S.Yu, A. Y. Zomaya, R. Ranjan. <a href="paper/tc2021.pdf">LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks</a>.  IEEE Trans. on Computers (TC), 2021 </span></p>
 
-<p><span class="style11">&bull; H.Peng, R.Zhang, Y.Dou, R.Yang, J.Zhang, and P.S.Yu. <a href="paper/tois2021-riognn.pdf">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM Trans. on Information Systems (TOIS), 2021  </span></p>
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. <a href="paper/tois2021-riognn.pdf">Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks</a>. ACM Trans. on Information Systems (TOIS), 2021  </span></p>
 
-<p><span class="style11">&bull; H.Peng, J.Li, Z.Wang, R.Yang, M.Liu, M.Zhang, P.S.Yu and L.He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Study for the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p> 
+<p><span class="style11">&bull; H. Peng, J. Li, Z. Wang, R. Yang, M. Liu, M. Zhang, P. S. Yu and L. He. <a href="paper/tkde2021.pdf"> Lifelong Property Price Prediction: A Case Study for the Toronto Real Estate Market</a>.  IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p> 
 
-<p><span class="style11">&bull; R.Yang, C.Hu, X.Sun, P.Garraghan, T.Wo, Z.Wen, H.Peng, J.Xu and C.Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
+<p><span class="style11">&bull; R. Yang, C. Hu, X. Sun, P. Garraghan, T. Wo, Z. Wen, H. Peng, J. Xu and C. Li. <a href="paper/tpds2020-rose.pdf">Performance-aware Speculative Resource Oversubscription for Large-scale Clusters</a>. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020 </span></p>
 
 	
-<p><span class="style11">&bull; Z.Wen, T.Lin, R.Yang*, S.Ji, R.Ranjan, A.Romanovsky, C.Lin, J.Xu. <a href="paper/tpds2019-gapar-full.pdf">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. 
+<p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang*, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. <a href="paper/tpds2019-gapar-full.pdf">GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds</a>. 
 IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
-<p><span class="style11">&bull; P.Garraghan, X.Ouyang, R.Yang*, D.Mckee and J.Xu. <a href="paper/tsc2016b.pdf">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
+<p><span class="style11">&bull; P. Garraghan, X. Ouyang, R. Yang*, D. Mckee and J. Xu. <a href="paper/tsc2016b.pdf">Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters</a>. IEEE Trans. on Services Computing (TSC), 2019   </span></p>
 
-<p><span class="style11">&bull; R.Yang, Y.Zhang, P.Garraghan, Y.Feng, J.Ouyang, J.Xu, Z.Zhang, C.Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
+<p><span class="style11">&bull; R. Yang, Y. Zhang, P. Garraghan, Y. Feng, J. Ouyang, J. Xu, Z. Zhang, C. Li. <a href="paper/tsc2016.pdf">Reliable Compute Service in Massive-scale Systems through Rapid Low-cost Failover</a>. IEEE Trans. on Services Computing (TSC), 2017</span></p>
 
-<p><span class="style11">&bull; R.Yang, Z.Wen, D.Mckee, T.Lin, J.Xu and P.Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
+<p><span class="style11">&bull; R. Yang, Z. Wen, D. Mckee, T. Lin, J. Xu and P. Garraghan. <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091"> Software-Defined Fog Orchestration for IoT Services</a>. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1, 2020</span></p>
 
-<p><span class="style11">&bull; Z.Wen, R.Yang*, P.Garraghan, T.Lin, J.Xu and M.Rovatsos. <a href="paper/ic2017.pdf">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017  </span></p>
+<p><span class="style11">&bull; Z. Wen, R. Yang*, P. Garraghan, T. Lin, J. Xu and M. Rovatsos. <a href="paper/ic2017.pdf">Fog Orchestration for IoT Services</a>. IEEE Internet Computing, 2017  </span></p>
 
-<p><span class="style11">&bull; R.Yang', J.Zhu', C.Hu, T.Wo, S.Xue, J.Ouyang and J.Xu. <a href="paper/ccgrid2021.pdf">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a>. IEEE/ACM CCGRID 2021 and ACM SoCC 2019 <a href="paper/socc2019-perphon.pdf">(poster, demo)</a> </span></p>
+<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang and J. Xu. <a href="paper/ccgrid2021.pdf">Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference</a> <a href="paper/socc2019-perphon.pdf">(poster, demo)</a>. IEEE/ACM CCGRID 2021 and ACM SoCC 2019 </span></p>
 
-<p><span class="style11">&bull; X.Sun, C.Hu, R.Yang*, P.Garraghan, T.Wo, J.Xu, J.Zhu, C.Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a>. IEEE ICDCS 2018 and ACM SOSP 2017 <a href="paper/sosp2017-poster.pdf">(poster, demo)</a></span></p>
+<p><span class="style11">&bull; X. Sun, C. Hu, R. Yang*, P. Garraghan, T. Wo, J. Xu, J. Zhu, C. Li.  <a href="paper/icdcs2018.pdf">ROSE: Cluster Resource Scheduling via Speculative Over-subscription</a> <a href="paper/sosp2017-poster.pdf">(poster, demo)</a>. IEEE ICDCS 2018 and ACM SOSP 2017 </span></p>
 
-<p><span class="style11">&bull;  Z.Zhang, C.Li, Y.Tao, R.Yang*, H.Tang and J.Xu. <a href="paper/vldb2014.pdf">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014</span></p>
+<p><span class="style11">&bull;  Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang and J. Xu. <a href="paper/vldb2014.pdf">Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale</a>. VLDB 2014</span></p>
 
-<p><span class="style11">&bull;  L.Cui, J.Li, T. Wo, B.Li, R.Yang, Y.Cao, and J.Huai. <a href="paper/lisa2014.pdf">HotRestore: A Fast Restore System for Virtual Machine Cluster</a>. USENIX LISA 2014 </span></p>
+<p><span class="style11">&bull;  L. Cui, J. Li, T. Wo, B. Li, R. Yang, Y. Cao, and J. Huai. <a href="paper/lisa2014.pdf">HotRestore: A Fast Restore System for Virtual Machine Cluster</a>. USENIX LISA 2014 </span></p>
 
-<p><span class="style11">&bull;  X.Ouyang, P.Garraghan, R.Yang, P.Townend and J.Xu. <a href="paper/dsn2016.pdf">Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters</a>. IEEE DSN 2016 </span></p>
+<p><span class="style11">&bull;  X. Ouyang, P. Garraghan, R. Yang, P. Townend and J. Xu. <a href="paper/dsn2016.pdf">Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters</a>. IEEE DSN 2016 </span></p>
 
 <p><span class="style11">~$ More publications can be found in:
 <a href="publications.html">[Complete List]</a> 
@@ -364,7 +364,7 @@ I had the opportunity to work closely with many institutes around the world and 
 I have been co-advising and/or working closely with many students mainly from COLAB. The programmes primarily include PhD and postgraduate projects (MSc research programme in China and MSc projects of module COMP5200M and COMP3211 in University of Leeds.) </span></p>
 
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
-<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.9- , Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , Beihang Uni., with Prof. Tianyu Wo) </span></p>
+<p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.9- , BDBC and Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; BSc Students: Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
 <p><span class="style11">&bull; Also closely working with Research Fellows: Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
@@ -396,7 +396,7 @@ I have been co-advising and/or working closely with many students mainly from CO
 <p><span class="style11">
 I have been collaborating closely with many brilliant researchers around the world. </span></p>
 <p><span class="style11"> ~$  <strong> team -l collaborator </strong> </span></p>
-<p><span class="style11">&bull; Dr. Ismael Solis Moreno (Data Scientist and Performance Analyst at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Reader/Professor at Lancaster University UK)</span></p>
+<p><span class="style11">&bull; Dr. Ismael Solis Moreno (Data Scientist and Performance Analyst at IBM Research), <a href="https://esl.lancs.ac.uk/">Dr. Peter Garraghan</a> (now Reader at Lancaster University UK)</span></p>
 
 <p><span class="style11">&bull; 	
 <a href="http://www.zhenyu.info/">Dr. Zhenyu Wen</a> (now Professor at Zhejiang University of Technology), Dr. Xue Ouyang (now assistant professor at NUDT), <a href="https://tlin-tao-lin.github.io/">Tao Lin (EPFL)</a></span></p>
@@ -427,7 +427,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 <div id="div_services">
 <p><span class="Bolder">Selected Professional Services </span></p>
 
-<p><span class="style11">&bull; Lead Guest Editor: "Machine Learning for Dependable Edge Computing Systems and Services" Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
+<p><span class="style11">&bull; Lead Guest Editor: <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC) </span></p>
 
 <p><span class="style11">&bull; Review Editor on the Editorial Board of Cybersecurity and Privacy, specialty section of Frontiers in Big Data </span></p>
 
@@ -436,16 +436,16 @@ I have been collaborating closely with many brilliant researchers around the wor
 <p><span class="style11">&bull; Area/Track Chair: IEEE International Conference on Cloud Computing (CLOUD) 2021. </span></p>
 
 
-<p><span class="style11">&bull; PC Member: IJCAI'21'22, ECAI'22, IEEE CLOUD'20'21'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
+<p><span class="style11">&bull; PC Member: IJCAI'21-'22, ECAI'21-'22, IEEE CLOUD'20-'22, ACM/IEEE UCC'18-'21,  IEEE/ACM BDCAT'16-'21, etc. </span></p>
 
 
-<p><span class="style11">&bull; Journal Reviewers: IEEE TPDS, TDSC, TC, TKDE, TKDD, TSC, TSE, TCC, ACM CSUR, etc. </span></p> 
+<p><span class="style11">&bull; Journal Reviewers: TPDS, TDSC, TC, TKDE, TSC, TSE, TCC, TKDD, CSUR, etc. </span></p> 
 
 <p><span class="style11">&bull; More professional services can be found here: <a href="services.html">~$ services</a> </span></p>
 
 <p><span class="Bolder">Selected Awards</span><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp;</span></p>
 
-<p><span class="style11">&bull;	  <strong>Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022. </p>
+<p><span class="style11">&bull;	  <strong>Alan Turing Institute Post-Doctoral Enrichment Award</strong>, 2022 </p>
 
 <p><span class="style11">&bull;   <strong>Outstanding Service Award</strong>, IEEE JCC-SOSE, 2020 </p>
 
