--- a/index.html
+++ b/index.html
@@ -328,9 +328,11 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
+<p><span class="style11">&bull; Large-scale Elastic GPU Cluster Scheduling, Industry Collaboration, funded by Kuaishou Tech., co-PI (forthcoming) </span></p> 
+
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
-<p><span class="style11">&bull; Enhanced Edge-Cloud Infrastructure for Distributed Intelligent Computing (£50K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2022.9 </span></p> 
+<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2022.9 </span></p> 
 
 <p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.8 </span></p> 
 
@@ -366,18 +368,19 @@ I have been co-advising and/or working closely with many students mainly from CO
 <p><span class="style11">~$  <strong> team -l current </strong> </span></p>
 <p><span class="style11">&bull; PhD Students: Jianyong Zhu (2017.9- , BDBC and Beihang Uni., with Prof. Chunming Hu), <a href="https://xshaun.github.io/">Xiaoyang Sun</a> (2019.9- , Uni of Leeds, with Prof. Jie Xu and Dr. Zheng Wang), Yiming Hei (2019.9- , BDBC and Beihang Uni., with Prof. Jianwei Liu and Dr. Hao Peng), Youmei Song (2017.9- , BDBC and Beihang Uni., with Prof. Tianyu Wo) </span></p>
 <p><span class="style11">&bull; BSc Students: Chris von Fay-Siebenburgen, Ziyao Wang, Zixuan Xu, Jacob Hall, Adam Stoddart (BSc, 2021-2022, Uni. of Leeds, with Prof. Jie Xu) </span></p>
-<p><span class="style11">&bull; Also closely working with Research Fellows: Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
+<p><span class="style11">&bull; MSc Students: Zhihao Yuan, Junhao Wei, Yifan Zhang, Wenjie Xia, Yixin Jiang, Kaidi Jin, Qian Chu (MSc. of COMP5200M, 2022 Spring, Uni. of Leeds, with Prof. Jie Xu and Dr. Satish Kumar) </span></p>
+<p><span class="style11">&bull; Also closely working Dr. Satish Kumar, Dr. Clément Mommessin </span></p>
 
 
 <p><span class="style11">~$  <strong> team -l alumni </strong> </span></p>
 
-<p><span class="style11">&bull; Gingfung Yeung (2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan) </span></p>
+<p><span class="style11">&bull; Gingfung Yeung (PhD., 2019.1-2021.12, Lancaster University, UK, with Dr. Peter Garraghan, first employment at Huawei UK) </span></p>
 <p><span class="style11">&bull; Wang Tang, Zhenbin Jin, Xianjie Yang (MSc. of COMP5200M, Spring 2021, Uni. of Leeds) </span></p>
 
 <p><span class="style11">&bull; Zixuan Fu, Kenan Jiang, Mengwei Zhao, Chao Guo (MSc. of COMP5200M, 2020 Autumn, Uni. of Leeds)
 <p><span class="style11">&bull; Chris London (BSc, 2021, Uni. of Leeds, first employment at Permutive UK), Charlee Boyle (BSc, 2021, Uni. of Leeds, first employment at IBM UK), Sam Hepburn (BSc, 2021, Uni. of Leeds, first employment at Knowledge Integration Ltd. UK) </span></p>
 
-<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
+<p><span class="style11">&bull; Jaber Almutairi (PhD., 2018.6 - 2020.1, Uni. of Leeds, with Prof. Jie Xu, first employment at CEO TaibahValley, KSA), Xiaochen Sun (2019.9-2020.9, Uni. of Leeds, Visiting PhD. Student from ISCAS, with Prof. Jie Xu) 
 </span></p> 
 
 <p><span class="style11">&bull;  Shiqing Xue (2018.9-2020.12, Beihang Uni.), Dr. Qi Shen (2017.9-2019.8, Postdoc researcher, Beihang Uni.) 
