--- a/publications.html
+++ b/publications.html
@@ -119,7 +119,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 
 <p><span class="style11">&bull; J. Zhu', R. Yang', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID) <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
 
-<p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. arper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
+<p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
 </span></p>
 
@@ -186,6 +186,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <a href="paper/socc2019-perphon.pdf"> [paper]</a>
 </span></p>
 
+<p><span class="style11"> &bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+</span></p>
+
 <p><span class="style11">  &bull; H. Peng, J. Li, S. Wang, L. Wang, Q. Gong, R. Yang, B. Li, L. He and P. S. Yu. Hierarchical Taxonomy-Aware and Attentional Graph Capsule RCNNs for Large-Scale Multi-Label Text Classification. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2019 <a href="paper/tkde2019.pdf">[paper]</a>  <span class="red">(Highly Cited Paper)</span>
 </span></p> 
 
@@ -247,17 +250,16 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; R. Yang, J. Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
 </span></p>
 
-<p lang="en-US"> <span class="red">2016 </span></p>
+<p lang="en-US"> <span class="red">2016 and Before </span></p>
 
-<p><span class="style11"> &bull; P. Garraghan, X. Ouyang, R. Yang*, D. McKee, J. Xu. Straggler Root-cause and Impact Analysis for Massive-scale Virtualized Cloud Datacenters, in IEEE Trans. on Services Computing (TSC) (SCI-IF = 4.418, Q1) <a href="paper/tsc2016b.pdf">[paper]</a>
+
+<p><span class="style11">  &bull; Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang, J. Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014 <a href="paper/vldb2014.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">  &bull; C. Hu, X. Wang, R. Yang and T. Wo. ScalaRDF: a Distributed, Elastic and Scalable In-Memory RDF Triple Store. in the 22th IEEE ICPADS 2016 <a href="paper/icpads2016.pdf">[paper]</a>
+<p><span class="style11">  &bull; X. Ouyang, P. Garraghan, R. Yang, P. Townend, and J. Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">  &bull; H. Wang, M. Zhang, R. Yang, X. Lin, T. Wo, R. Ranjan and J. Xu. SMTP: An Optimized Storage Model For Big Vehicle Trajectory Data Exploiting Trajectory Pattern. in the18th IEEE HPCC 2016, <a href="paper/hpcc2016.pdf">[paper]</a>  
-</span></p>
-<p><span class="style11">  &bull; R. Yang, T. Wo, C. Hu, J. Xu and M. Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf">[paper]</a>
+<p><span class="style11">  &bull; L. Cui, J. Li, T. Wo, B. Li, R. Yang, Y. Cao, J. Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">  &bull; R. Yang and J. Xu. Computing at Massive Scale: Scalability and Dependability Challenges, in the 10th IEEE International Symposium on Service Oriented System Engineering (SOSE 2016) <a href="paper/sose2016.pdf">[paper]</a> 
@@ -266,22 +268,18 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; R. Yang, J. Ouyang, C. Hu. Fail at Scale. Communications of CCF, 2016 (In Chinese) <a href="paper/ccfcomm2016.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">  &bull; X. Ouyang, P. Garraghan, R. Yang, P. Townend, and J. Xu. Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters, in the 46th IEEE/IFIP DSN 2016 (short) <a href="paper/dsn2016.pdf">[paper]</a>
+<p><span class="style11">  &bull; R. Yang, T. Wo, C. Hu, J. Xu and M. Zhang. D2PS : a Dependable Data Provisioning Service in Multi-tenants Cloud Environment. in the 17th IEEE HASE 2016 <a href="paper/hase2016.pdf">[paper]</a>
 </span></p>
 
-<p lang="en-US"> <span class="red">2015 </span></p>
+<p><span class="style11">  &bull; C. Hu, X. Wang, R. Yang and T. Wo. ScalaRDF: a Distributed, Elastic and Scalable In-Memory RDF Triple Store. in the 22th IEEE ICPADS 2016 <a href="paper/icpads2016.pdf">[paper]</a>
+</span></p>
+
+<p><span class="style11">  &bull; H. Wang, M. Zhang, R. Yang, X. Lin, T. Wo, R. Ranjan and J. Xu. SMTP: An Optimized Storage Model For Big Vehicle Trajectory Data Exploiting Trajectory Pattern. in the18th IEEE HPCC 2016, <a href="paper/hpcc2016.pdf">[paper]</a>  
+</span></p>
 
 <p><span class="style11">  &bull; W. Jiang, T. Wo, M. Zhang, R. Yang, J. Xu
 A Method for Private Car Transportation Dispatching Based on a Passenger Demand Model. in the 2nd International Conference on Internet of Vehicles (IoV 2015), 
 <a href="paper/iov2015.pdf">[paper]</a>
-</span></p>
-
-<p lang="en-US"> <span class="red">2014 </span></p>
-
-<p><span class="style11">  &bull; L. Cui, J. Li, T. Wo, B. Li, R. Yang, Y. Cao, J. Huai. HotRestore: A Fast Restore System for Virtual Machine Cluster, in the 28th USENIX Large Installation System Administration Conference (LISA 2014) <a href="paper/lisa2014.pdf">[paper]</a>
-</span></p>
-
-<p><span class="style11">  &bull; Z. Zhang, C. Li, Y. Tao, R. Yang*, H. Tang, J. Xu. Fuxi: a Fault-Tolerant Resource Management and Job Scheduling System at Internet Scale, in the 40th VLDB 2014 <a href="paper/vldb2014.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">  &bull; Y. Huang, R. Yang, L. Cui, T. Wo, C. Hu, B. Li. VMCSnap: Taking Snapshots of Virtual Machine Cluster with Memory Deduplication. in the 8th IEEE SOSE 2014 <a href="paper/ivce2014.pdf">[paper]</a>
@@ -295,8 +293,6 @@ A Method for Private Car Transportation Dispatching Based on a Passenger Demand 
 
 <p><span class="style11">  &bull; B. Zhang, J. Kang, T. Wo, Y. Wang, R. Yang. a Flexible and Scalable Affinity Lock for the Kernel, in the 16th IEEE HPCC 2014 <a href="paper/hpcc2014.pdf">[paper]</a> 
 </span></p>
-
-<p lang="en-US"> <span class="red">2013 </span></p>
 
 <p><span class="style11">  &bull; I. S. Moreno, R. Yang, J. Xu, T. Wo. Improved Energy-Efficiency in Cloud Datacenters with Interference-Aware Virtual Machine Placement. in the 11th IEEE ISADS 2013  <a href="paper/isads2013.pdf">[paper]</a> <span class="red">(Best Paper Award)</span>
 </span></p>
