--- a/index.html
+++ b/index.html
@@ -260,9 +260,11 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2017.3 - 2018.3: &nbsp;&nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brian Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2017.3 - 2018.4: &nbsp;&nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brian Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
-<p><span class="style11">&bull; 2018.3 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
+<p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), &nbsp; Lancaster University, UK &nbsp;&nbsp; </span></p> 
+
+<p><span class="style11">&bull; 2018.5 - 2020.8: &nbsp;&nbsp; Research Scientist, Edgetic Ltd., UK </span></p> 
 <p><span class="style11">&bull; 2017.10 - 2020.8: &nbsp; Adjunct Research Fellow at University of Leeds, UK </span></p>
 </div>
 
