--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">~$  <strong> grants -l </strong> </span></p>
 
-<p><span class="style11">&bull; Large-scale Elastic GPU Cluster Scheduling, Industry Collaboration, funded by Kuaishou Tech., co-PI (forthcoming) </span></p> 
+<p><span class="style11">&bull; Large-scale GPU Cluster Scheduling for Deep Learning, Industry-funded Collaboration, co-PI, 2022.4 - present </span></p> 
 
 <p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
 
@@ -338,13 +338,13 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.8 </span></p> 
 
-<p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and key member, 2020.2 - 2020.8 </span></p>
+<p><span class="style11">&bull; Farm Observatory Instrumentation, University of Leeds (£4M+), module lead, 2021.3 - present </span></p> 
 
-<p><span class="style11">&bull; Boden Type Data Center One (No.768875, €2.87M), funded by European Comission’s Horizon 2020 Programme (Horizon 2020), member, 2018.6 - 2019.12 </span></p>
+<p><span class="style11">&bull; Server Modelling Capability (No.45904, £300K), funded by Innovate UK Programme, UKRI, co-author and module lead, 2020.2 - 2020.8 </span></p>
 
-<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/P031617/1, £97K), UK Engineering and Physical Sciences Research Council (EPSRC), member, 2017.9 - 2019.12 </span></p>
+<p><span class="style11">&bull; Boden Type Data Center One (No.768875, €2.87M), funded by European Comission’s Horizon 2020 Programme (Horizon 2020), module lead, 2018.6 - 2019.12 </span></p>
 
-
+<p><span class="style11">&bull; Pin the Tail: Understanding Straggler Manifestation in Internet-based Distributed Systems (EP/P031617/1, £97K), UK Engineering and Physical Sciences Research Council (EPSRC), module lead, 2017.9 - 2019.12 </span></p>
 
 <p><span class="style11">&bull; Cloud Operating System - Multiple-grained Resource Management and Scheduling (No. 2016YFB1000503), supported by National Key Research and Development Programme,  co-author, project leader/coordinator, 2016.6 - 2018.5 </span></p>
 
@@ -352,9 +352,9 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; On-demand Resource Aggregation and Execution in Massive-scale iVCE Environments (No.2011CB302602), supported by China 973 Fundamental Research and Development Programme, co-author, project leader/coordinator, 2012.1 - 2015.9 </span></p>
 
-<p><span class="style11">&bull; ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2013.1 - 2014.1 </span></p>
+<p><span class="style11">&bull; ChinaCloud Phase II: Fundmental Key Software for Cloud Platforms (No.2013AA01A213), supported by National 863 Hi-Tech Research and Development Programme, key member, 2013.1 - 2014.1 </span></p>
 
-<p><span class="style11">&bull; ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, Key Member, 2011.9 - 2013.12 </span></p> 
+<p><span class="style11">&bull; ChinaCloud Phase I: Resource Virtualization and Scheduling (No. 2011AA01A202),  supported by National 863 Hi-Tech Research and Development Programme, key member, 2011.9 - 2013.12 </span></p> 
 
 </div>
 
@@ -494,7 +494,7 @@ I have been collaborating closely with many brilliant researchers around the wor
 
 
 <p><span class="style11">&nbsp;&nbsp; &nbsp;&nbsp; &nbsp;  </span></p>
-<p><span class="style11">  Updated by Jan 2022 </span></p>
+<p><span class="style11">  Updated by March 2022 </span></p>
 
 </td>
 
