--- a/publications.html
+++ b/publications.html
@@ -105,8 +105,23 @@ p{ margin:10px auto}
 <hr style="width:100%;text-align:left;margin-left:0">
 
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first author with equal contribution </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me. '= co-first author with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
 
+<p lang="en-US"><span class="red">2022</span></p>
+
+<p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
+<a href="paper/tpds2021-horus.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC) 
+<a href="paper/tc2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">  &bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a> 
+</span></p>
+
+<p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing <a href="paper/ic2022.pdf">[paper]</a> 
+</span></p>
 
 <p lang="en-US"><span class="red">2021</span></p>
 
@@ -117,17 +132,9 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; Y. Hei', R. Yang', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS)  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; J. Zhu', R. Yang', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID) <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
+<p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID) <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
 
-<p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
-<a href="paper/tpds2021-horus.pdf">[paper]</a> 
-</span></p>
-
-<p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC) 
-<a href="paper/tc2021.pdf">[paper]</a> 
-</span></p>
-
-<p><span class="style11">&bull; Y. Song, T. Wo*, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC)  <a href="paper/jpdc2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y. Song, T. Wo, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC)  <a href="paper/jpdc2021.pdf">[paper]</a> 
 </span></p>
 
 <p><span class="style11">  &bull; H. Peng, J. Li, Z. Wang, R. Yang, M.Liu, M. Zhang, P. S. Yu, L. He. Lifelong Property Price Prediction: A Case Study for The Toronto Real Estate Market.  IEEE Trans. on Knowledge and Data Engineering (TKDE) <a href="paper/tkde2021.pdf">[paper]</a> 
@@ -136,10 +143,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
-</span></p>
-
-<p><span class="style11">  &bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
 </span></p>
 
 <p lang="en-US"><span class="red">2020</span></p>
@@ -152,7 +156,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <p><span class="style11">  &bull; B. Qian, J. Su, Z. Wen, D. N. Jha, Y. Li, Y. Guan, D. Puthal, P. James, R. Yang, A. Y. Zomaya, O. Rana, L. Wang, R. Ranjan. Orchestrating Development Lifecycle of ML-Based IoT Applications: a Survey. ACM Computing Surveys (CSUR), 2020 
 <a href="http://arxiv.org/abs/1910.05433">[arxiv]</a><a href="paper/csur2020.pdf">[paper]</a> </span></p>
 
-<p><span class="style11">  &bull; R. Yang, Z. Wen, D. Mckee, T. Lin, J. Xu and P. Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
+<p><span class="style11">  &bull; R. Yang, Z. Wen, D. McKee, T. Lin, J. Xu and P. Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
 <a href="https://scholar.google.com/scholar?oi=bibs&cluster=10135161801314640093&btnI=1&hl=en"> [googlebook]</a> 
 <a href="paper/bookchapter2018-fogorch.pdf">[preprint]</a>
  </span></p>
@@ -247,7 +251,7 @@ SysOptic: A Fine-Grained Monitoring System for Virtual Machines Based on PMU. in
 <p><span class="style11">  &bull; X. Ouyang, C. Wang, R. Yang, P. Townend, J. Xu. ML-NA: a Machine Learning based Node Performance Analyzer Utilizing Straggler Statistics. In the 23th IEEE ICPADS 2017 <a href="paper/icpads2017.pdf">[paper]</a>
 </span></p>
 
-<p><span class="style11">  &bull; R. Yang, J. Xu. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
+<p><span class="style11">  &bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
 
 <p lang="en-US"> <span class="red">2016 and Before </span></p>
