--- a/publications_topics.html
+++ b/publications_topics.html
@@ -106,14 +106,14 @@ p{ margin:10px auto}
 <hr style="width:100%;text-align:left;margin-left:0">
 
 <p lang="en-US"><span class="incline"> Notice: The copyright of these papers is with the respective publishers. It is being reproduced here for timely dissemination of scholarly information.   </span> &nbsp; &nbsp;</p>
-<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me.  '= equal contribution  </span> &nbsp; &nbsp;</p>
+<p lang="en-US"><span class="incline"> * = corresponding author of the paper with students or team members supervised by me.  '= co-first authors with equal contribution by alphabetical order </span> &nbsp; &nbsp;</p>
 
 
 
 <p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
 
 
-<p><span class="style11">&bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 (with Honor)  
+<p><span class="style11">&bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
 </span></p>
 
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
@@ -141,7 +141,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <p><span class="style11">&bull; R. Yang', J. Zhu', C. Hu, T. Wo, S. Xue, J. Ouyang, J. Xu. Perph: A Workload Co-location Agent with Online Performance Prediction and Resource Inference. IEEE/ACM International Symposium on Cluster, Cloud and Internet Computing (CCGRID), 2021 <a href="paper/ccgrid2021.pdf">[paper]</a>  </span></p>
 
 
-<p><span class="style11">&bull; R. Yang, Z. Wen, D. Mckee, T. Lin, J. Xu and P. Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
+<p><span class="style11">&bull; R. Yang, Z. Wen, D. McKee, T. Lin, J. Xu and P. Garraghan. Software-Defined Fog Orchestration for IoT Services. Book Chapter, Fog and Fogonomics Challenges and Practices, Wiley, ISBN: 978-1-119-50109-1 <a href="https://www.wiley.com/en-ag/Fog+and+Fogonomics%3A+Challenges+and+Practices+of+Fog+Computing%2C+Communication%2C+Networking%2C+Strategy%2C+and+Economics-p-9781119501091">[link]</a>
 <a href="https://scholar.google.com/scholar?oi=bibs&cluster=10135161801314640093&btnI=1&hl=en"> [googlebook]</a> 
 <a href="">[preprint]</a>
  </span></p>
@@ -187,7 +187,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <p><span class="style11">&bull; R. Yang', Y.Hei', H. Peng, L. Wang, X. Xu, J. Liu, H. Liu, J. Xu, L. Sun. Hawk: Reliable Android Malware Detection through Heterogeneous Graph Neural Network. IEEE Trans. on Neural Networks and Learning Systems (TNNLS), 2021  <a href="paper/tnnls2021-hawk.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; Y. Song, T. Wo*, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC), 2021  <a href="paper/jpdc2021.pdf">[paper]</a> 
+<p><span class="style11">&bull; Y. Song, T. Wo, R. Yang*, Q. Shen and J. Xu. Joint Optimization of Cache Placement and Request Routing in Unreliable Networks. Journal of Parallel and Distributed Computing (JPDC), 2021 <a href="paper/jpdc2021.pdf">[paper]</a>
 </span></p>
 
 <p><span class="style11">&bull; Z. Wen, T. Lin, R. Yang*, S. Ji, R. Ranjan, A. Romanovsky, C. Lin, J. Xu. GA-Par: Dependable Microservice Orchestration Framework for Geo-Distributed Clouds, 
@@ -224,6 +224,9 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 
 <p lang="en-US"><span class="red"> Big Data and Deep Learning: Systems and Applications </span></p>
 
+<p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing, 2022 <a href="paper/ic2022.pdf">[paper]</a> 
+</span></p>
+
 <p><span class="style11">&bull; H. Peng, R. Yang, Z. Wang, J. Li, L. He, P. S. Yu, A. Y. Zomaya, R. Ranjan. LIME: Low-Cost and Incremental Learning for Dynamic Heterogeneous Information Networks. IEEE Trans. on Computers (TC), 2021 
 <a href="paper/tc2021.pdf">[paper]</a> 
 </span></p>
@@ -231,7 +234,7 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD), 2021 <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational GraphNeural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks, ACM Trans. on Information Systems (TOIS), 2021 <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
 </span></p>
 
 <p><span class="style11">&bull; Q. Li, H. Peng, J. Li, C. Xia, R. Yang, L. Sun, P. S. Yu, L. He. A Survey on Text Classification: from Traditional to Deep Learning. ACM Trans. on  Intelligent Systems and Technology (TIST) <a href="paper/tist2021.pdf">[paper]</a><a href="https://arxiv.org/abs/2008.00364">[arxiv]</a> 
