--- a/index.html
+++ b/index.html
@@ -219,11 +219,11 @@ p{ margin:10px auto}
 <div id="div_bio">
 
 <p class="Bolder">Short Bio</p> 
-<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brian Computing (BDBC)</a>, Beijing, China. I was a research scientist at Edgetic Ltd., a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
+<p><span class="style11"> I am currently a UK EPSRC-funded research fellow at the <a href="https://eps.leeds.ac.uk/computing" style="text-decoration: none">School of Computing</a>, <a href="https://eps.leeds.ac.uk/" style="text-decoration: none">Faculty of Engineering and Physical Sciences</a>, University of Leeds, UK. I am also a visiting research scientist with the <a href="http://bdbc.buaa.edu.cn" style="text-decoration: none">Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC)</a>, Beijing, China. I was a research scientist at Edgetic Ltd., a UK-based startup high-tech company that employs distributed scheduling, machine learning, hardware-software modeling, etc. to reshape the future of data center efficiency. 
 I have been (co-)leading several China/UK national and international projects in terms of distributed resource management and scheduling, massive-scale data analysis for intelligent decision making, and deep learning systems. We build large-scale resource management infrastructures and system profiling framework to support those functionalities. 
 </span></p>
 
-<p><span class="style11">  I has published more than 45 peer-reviewed papers, in the field of distributed systems, cloud computing, data centric engineering, and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Information Systems (TOIS), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. I won the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral Enrichment Award 2022 for resilient deep reinforcement learning. I was awarded the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.  
+<p><span class="style11">  I has published more than 45 peer-reviewed papers, in the field of distributed systems, cloud computing, data centric engineering, and applied deep learning techniques. They appear in top journals and conference proceedings such as IEEE Trans. on Parallel and Distributed Systems (TPDS), IEEE Trans. on Computers (TC), IEEE Trans. on Knowledge and Data Engineering (TKDE), IEEE Trans. on Neural Networks and Learning Systems (TNNLS), IEEE Trans. on Services Computing (TSC), ACM Trans. on Information Systems (TOIS), ACM Trans. on Knowledge Discovery from Data (TKDD), IEEE Internet Computing, VLDB, IEEE ICDCS, IEEE DSN, USENIX LISA, ACM SoCC, etc. I am a recipient of the Best Paper Award in IEEE ISADS 2013 for energy-efficient computing and Alan Turing Institute Post-Doctoral Enrichment Award 2022 for resilient deep reinforcement learning, and the Grand Class of Scientific and Technological Progress Award of Chinese Institute of Electronics of year 2017 (the only grand class award since the award is established) for the key contribution to the reliable resource management at massive scale and its industrial and societal impact.  
 	</span></p>
 
 <p><span class="style11"> I obtained my BSc and PhD from School of Computing, <a href="http://www.buaa.edu.cn" style="text-decoration: none">Beihang University</a>, China in June 2011 and January 2017, respectively. I had been working in both State Key Laboratory of Software Development Environment (SKLSDE) in Beihang University and Distributed Systems and Services (DSS) lab in the University of Leeds for many years. I had led several UK-China research collaborations including the COLAB (short for Leeds, Alibaba, Beihang) project and developed strong links with China-UK Computer Science community (such as Tsinghua University, Peking University, SJTU, NUDT, University of Edinburgh, Lancaster University, Newcastle University upon Tyne, etc.). I co-founded the SIGRS (Special Interest Group on Resource Scheduling) and subsequent MSDS (Massive-Scale Distributed Systems) Research Group in COLAB. During 2014 to 2016, I was also with Fuxi, the Distributed Resource Scheduling Team in Alibaba Cloud Inc., participating in the development and research on resource scheduling and performance optimization at Internet scale. I am a member of IEEE and ACM.
@@ -259,7 +259,7 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="style11">&bull; 2016.4 - 2016.5: &nbsp; Visiting Researcher (work with Dr. Zhenyu Wen), &nbsp; University of Edinburgh, UK &nbsp;&nbsp; </span></p> 
 
-<p><span class="style11">&bull; 2017.3 - 2018.4: &nbsp;&nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brian Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
+<p><span class="style11">&bull; 2017.3 - 2018.4: &nbsp;&nbsp; Research Scientist and Project Director, Beijing Advanced Innovation Center for Big Data and Brain Computing (BDBC), Beijing, China &nbsp;&nbsp;</span></p>
  
 <p><span class="style11">&bull; 2018.2 - 2018.2: &nbsp; Visiting Researcher (work with Dr. Peter Garraghan), &nbsp; Lancaster University, UK &nbsp;&nbsp; </span></p> 
 
@@ -274,7 +274,8 @@ I have been (co-)leading several China/UK national and international projects in
 
 <p><span class="Bolder">Selected Publications &nbsp; </span></p>
 
-<p><span class="style11">
+
+<p><span class="style11">~$ pub -rl</span></p> 
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p>
 
@@ -312,13 +313,15 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2019  </span></p>
 
 <p><span class="style11">&bull;  X. Ouyang, P. Garraghan, R. Yang, P. Townend and J. Xu. <a href="paper/dsn2016.pdf" style="text-decoration: none">Reducing Late-Timing Failure at Scale: Straggler Root-Cause Analysis in Cloud Datacenters</a>. IEEE DSN 2016 </span></p>
 
-<p><span class="style11">~$ More publications can be found in:
+<p><span class="style11">~$ pub -al More publications can be found in:
 <a href="publications.html" style="text-decoration: none">[Complete List]</a> 
 <a href="https://dblp.org/pid/142/7754.html" style="text-decoration: none">[DBLP]</a>
 <a href="http://scholar.google.com/citations?user=H_x5laoAAAAJ&hl=en" style="text-decoration: none">[Googe Scholar]</a>
 </span></p> 
 
 </div>
+
+
 
 <div id="div_grants">
 
@@ -331,11 +334,11 @@ I had the opportunity to work closely with many institutes around the world and 
 
 <p><span class="style11">&bull; Large-scale GPU Cluster Scheduling for Deep Learning, Industry-funded Collaboration, co-PI, 2022.4 - present </span></p> 
 
-<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - 2022.10 </span></p> 
+<p><span class="style11">&bull; Resilient Multi-Agent Deep Reinforcement Learning for Green Logistics Scheduling, funded by the Turing Enrichment Scheme, the Alan Turing Institute, PI, 2022.3 - present </span></p> 
 
-<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - 2022.9 </span></p> 
+<p><span class="style11">&bull; New Edge-Cloud Infrastructure for Distributed Intelligent Computing (£55K), funded by Turing Pilot Project, the Alan Turing Institute, Co-I, 2022.1 - present </span></p> 
 
-<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - 2023.8 </span></p> 
+<p><span class="style11">&bull; Algorithmic Support for Massive Scale Distributed Systems (EP/T01461X/1, £1.1M) funded by UK Engineering and Physical Sciences Research Council (EPSRC), co-author and project leader, 2020.9 - present </span></p> 
 
 <p><span class="style11">&bull; Farm Observatory Instrumentation, University of Leeds (£4M+), module lead, 2021.3 - present </span></p> 
 
