--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@ p{ margin:10px auto}
 <p><span class="style11"> <span class="red">[Call for Papers]</span> <a href="call4papers/BDCC-SI-2022.pdf">"Machine Learning for Dependable Edge Computing Systems and Services"</a> Special Issue in the journal of Big Data and Cognitive Computing (BDCC), Deadline: 30 Sept 2022 </span></p>
 
 
+<p><span class="style11">(27/01/2022) Our work on "STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training" is accepted by the International Conference for High Performance Computing, Networking, Storage, and Analysis (SC) 2022! Big Congrats to Xiaoyang and Shenghao! 
+</span></p>
+
 <p><span class="style11">(27/01/2022) received Alan Turing Institute Post-Doctoral Enrichment Award 2022.  
 </span></p>
 
@@ -276,6 +279,8 @@ I have been (co-)leading several China/UK national and international projects in
 
 
 <p><span class="style11">~$ pub -rl</span></p> 
+
+<p><span class="style11">&bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. <a href="paper/sc2022.pdf" style="text-decoration: none">STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training</a>. ACM/IEEE SC 2022 (accepted) </span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. <a href="paper/tkde2021-bissiam.pdf" style="text-decoration: none">BISSIAM: Bispectrum Siamese Network Based Contrastive Learning for UAV Anomaly Detection</a>. IEEE Trans. on Knowledge and Data Engineering (TKDE), 2021 </span></p>
 
