--- a/publications.html
+++ b/publications.html
@@ -109,6 +109,11 @@ p{ margin:10px auto}
 
 <p lang="en-US"><span class="red">2022</span></p>
 
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
+(accepted) <a href="paper/sc2022.pdf">[paper]</a> 
+</span></p>
+
+
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS) 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
 </span></p>
