--- a/publications_topics.html
+++ b/publications_topics.html
@@ -113,8 +113,9 @@ p{ margin:10px auto}
 <p lang="en-US"><span class="red"> Distributed System and Resource Management: Scheduling and Orchestration </span></p>
 
 
-<p><span class="style11">&bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
-</span></p>
+<p><span class="style11"> &bull; X. Sun, W. Wang, S. Qiu, R. Yang*, S. Huang, J. Xu, Z. Wang. STRONGHOLD: Fast and Affordable Billion-scale Deep Learning Model Training. IEEE/ACM International Conference for High Performance Computing, Networking, Storage, and Analysis (SC), 2022
+	(accepted) <a href="paper/sc2022.pdf">[paper]</a> 
+	</span></p>
 
 <p><span class="style11"> &bull; G. Yeung, B. Borowiec, R. Yang*, A. Friday, R. Harper, P. Garraghan. Horus: Interference-aware and Prediction-based Scheduling in Deep Learning Systems. IEEE Trans. on Parallel and Distributed Systems (TPDS), 2021 
 <a href="paper/tpds2021-horus.pdf">[paper]</a> 
@@ -163,6 +164,8 @@ IEEE Trans. on Parallel and Distributed Systems (TPDS), 2020
 <p><span class="style11">&bull; R. Yang, X. Ouyang, Y. Chen, P. Townend, J. Xu. Intelligent Resource Scheduling: a Machine Learning Perspective. in the 12th IEEE SOSE 2018, <a href="paper/sose2018.pdf">[paper]</a>       
 </span></p>
 
+<p><span class="style11">&bull; R. Yang. Efficient and Reliable Resource Scheduling at Internet Scale: Theory and Practice, PhD. thesis, 2017 <span class="red"> (with Honor, Outstanding Graduate Award of Beijing Graduates)</span>
+</span></p>
 
 <p><span class="style11">&bull; R. Yang and J. Xu. Computing at Massive Scale: Scalability and Dependability Challenges, in the 10th IEEE International Symposium on Service Oriented System Engineering (SOSE 2016) <a href="paper/sose2016.pdf">[paper]</a> 
 </span></p>
