--- a/publications.html
+++ b/publications.html
@@ -128,6 +128,11 @@ p{ margin:10px auto}
 <p><span class="style11">&bull; Z. Wen, H. Hu, R. Yang*, B. Qian, R. Sham, R. Sun, J. Xu, P. Patel, O. Rana, S. Dustdar, R. Ranjan. Orchestrating Networked Machine Learning Applications using Autosteer, IEEE Internet Computing <a href="paper/ic2022.pdf">[paper]</a> 
 </span></p>
 
+<p><span class="style11">&bull; R. Yang', Y. Yang', Y. Li, K. Cui, Z. Yang, Y. Wang, J.Xu, H. Xie. RoSGAS: Adaptive Social Bot Detection with Reinforced Self-supervised GNN Architecture Search.  arXiv preprint arXiv:2206.06757
+<a href="paper/tweb2022-rosgas.pdf">[paper]</a><a href="https://arxiv.org/pdf/2206.06757">[arxiv]</a> 
+</span></p>
+
+
 <p lang="en-US"><span class="red">2021</span></p>
 
 <p><span class="style11">&bull; T. Li, Z. Hong, Q. Cai, L. Yu, Z. Wen, and R. Yang*. BISSIAM: Bispectrum Siamese Network Based
@@ -148,7 +153,7 @@ Contrastive Learning for UAV Anomaly Detection,  IEEE Trans. on Knowledge and Da
 <p><span class="style11">&bull; H. Peng, J. Li, Y. Song, R. Yang, R. Ranjan, P. S. Yu, L. He. Streaming Social Event Detection and Evolution Discovery in Heterogeneous Information Networks, ACM Trans. on Knowledge Discovery from Data (TKDD) <a href="paper/tkdd2021.pdf">[paper]</a> 
 </span></p>
 
-<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arkiv]</a> 
+<p><span class="style11">&bull; H. Peng, R. Zhang, Y. Dou, R. Yang, J. Zhang, and P. S. Yu. Reinforced Neighborhood Selection Guided Multi-Relational Graph Neural Networks. ACM Trans. on Information Systems (TOIS) <a href="paper/tois2021-riognn.pdf">[paper]</a><a href="https://arxiv.org/abs/2104.07886">[arxiv]</a> 
 </span></p>
 
 <p lang="en-US"><span class="red">2020</span></p>
